--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ h1 {
 h2 {
 	font-size: 15px;
 	text-align: center;
-	color: #cccccc;
+	color: #2F4F4F;
 	padding-bottom: 2px;
 }
 
@@ -43,7 +43,7 @@ a:hover {
 }
 
 a:link, a:visited, a:active {
-	color: #006666;
+	color: #2F4F4F;
 	font-size: 17px;
 }
 
